[tool.poetry]
name = "refried"
version = "0.0.1"
description = "A collection of plugins and scripts for beancount and fava for monthly budgeting."
authors = ["scauligi <scauligi@eng.ucsd.edu>"]
license = "GPL-3.0-only"
readme = 'README.md'
repository = "https://github.com/scauligi/refried"
packages = [{ include = 'refried' }]

[tool.poetry.dependencies]
python = "^3.6"
beancount = ">=2.1.3,<3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
